feat: Implement lazy loading for pages
Improves initial load performance by implementing code splitting for application pages. This change defers the loading of page components until they are actually needed. Also adjusts the script tag in index.html to remove unnecessary Babel preset for module type.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
     <!-- Modificado o tipo de script para que o Babel possa transpilar o TSX -->
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
