--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
         height: 100%;
         width: 100%;
       }
+      .sync-marker {
+        background-color: rgba(255, 255, 255, 0.8);
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        border: 3px solid #facc15; /* yellow-400 */
+        box-shadow: 0 0 10px #facc15;
+        animation: pulse 1.5s infinite;
+      }
+      @keyframes pulse {
+        0% {
+          transform: scale(0.9);
+          box-shadow: 0 0 0 0 rgba(250, 204, 21, 0.7);
+        }
+        70% {
+          transform: scale(1.1);
+          box-shadow: 0 0 10px 10px rgba(250, 204, 21, 0);
+        }
+        100% {
+          transform: scale(0.9);
+          box-shadow: 0 0 0 0 rgba(250, 204, 21, 0);
+        }
+      }
     </style>
   <script type="importmap">
 {
