--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
           box-shadow: 0 0 0 0 rgba(250, 204, 21, 0);
         }
       }
+      .pilot-info-tooltip {
+        background-color: rgba(17, 24, 39, 0.85); /* bg-gray-900/85 */
+        backdrop-filter: blur(2px);
+        border: 1px solid #374151; /* gray-700 */
+        border-radius: 6px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+        color: #d1d5db; /* gray-300 */
+        padding: 6px 10px;
+        font-family: sans-serif;
+        font-size: 12px;
+        line-height: 1.5;
+        white-space: nowrap;
+      }
+      .leaflet-tooltip-right:before {
+        border-right-color: #374151; /* Match border color */
+      }
     </style>
   <script type="importmap">
 {
